<resources>
    <string name="app_name">youthPesa</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="set_profile">Set Profile</string>
    <string name="add_post">Add Post</string>
    <string name="post_a_job">Post a job</string>
    <string name="user">user</string>
    <string name="profile">profile</string>
    <string name="payment">payment</string>
    <string name="communication">chat</string>
    <string name="contact_us">contact us</string>
    <string name="about_us">about us</string>
    <string name="share_app">share app</string>
</resources>